# AgentChange

./: .gitignore  README.md  pyproject.toml
.codex-plugin/: plugin.json
agentchange/: __init__.py  cli.py  command_runner.py  display.py  doctor.py  environment.py  evidence.py  finalizer.py  git_analysis.py  hook_entry.py  installer.py  models.py  normalize.py  raw_capture.py  receipt.py  recorder.py  risk.py  slack.py  state.py  ui.py
examples/: sample_receipt.json  sample_receipt.md  sample_session.jsonl
fixtures/codex_hooks/: malformed.json  missing_optional_fields.json  permission_request.json  post_tool_use_agentchange_runner_failed.json  post_tool_use_agentchange_runner_malformed.json  post_tool_use_agentchange_runner_misleading.json  post_tool_use_agentchange_runner_success.json  post_tool_use_bash_failed.json  post_tool_use_bash_silent_failed.json  post_tool_use_bash_silent_success.json  post_tool_use_bash_success.json  post_tool_use_mcp.json  post_tool_use_patch.json  pre_tool_use_bash.json  pre_tool_use_dependency_patch.json  pre_tool_use_mcp.json  pre_tool_use_patch.json  session_start.json  stop.json  user_prompt_submit.json
hooks/: hooks.json
prompts/: INITIAL_PROMPT.md  PHASE1_PROMPT.md  PHASE2_PROMPT.md
scripts/: __init__.py  demo_end_to_end.py  demo_end_to_end.sh  generate_demo_events.py  install_local.ps1  install_local.py  install_local.sh
skills/agentchange/: SKILL.md
tests/: test_agentchange_live_demo.py  test_change_summary.py  test_command_runner.py  test_hook_entry.py  test_normalize.py  test_packaging.py  test_phase2.py  test_phase3.py  test_raw_capture.py  test_sample_generation.py  test_vertical_slice_1.py  test_vertical_slice_2.py
