[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentchange"
version = "0.1.0"
description = "Evidence capture for supported Codex lifecycle hooks"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.7,<3"]

[project.scripts]
agentchange-run = "agentchange.command_runner:main"

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
packages = ["agentchange", "scripts"]
